--- a/FE/src/index.html
+++ b/FE/src/index.html
@@ -11,6 +11,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <script async defer crossorigin="anonymous"
     src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "LeadsBus",
+    "url": "https://leadsbus.com/",
+    "logo": "https://leadsbus.com/assets/logo.png"
+  }
+</script>
 </body>
 </head>
 <body>
