--- a/FE/src/index.html
+++ b/FE/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="icon" type="image/png" href="./assets/images/logo.png">
+  <link rel="icon" type="image/png" href="./assets/images/message-icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <script async defer crossorigin="anonymous"
@@ -17,10 +17,10 @@
     "@type": "Organization",
     "name": "LeadsBus",
     "url": "https://leadsbus.com/",
-    "logo": "https://leadsbus.com/assets/logo.png"
+    "logo": "https://leadsbus.com/assets/images/message-icon.png"
   }
-</script>
-</body>
+  </script>
+  <meta name="robots" content="index, follow">
 </head>
 <body>
   <app-root></app-root>
